2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightProject.cs: Fix preventing
	  showing a console for moonlight run. If we do create a
	  console, dispose it. We need a real way to avoid showing
	  consoles for execution handlers that don't use them.

2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightFrameworkBackend.cs: Check
	  MOONLIGHT_SDK_PATH from env as well as the target runtime,
	  since Moonlight needn't be bound strictly to a single target
	  runtime.

2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: If the
	  framework package is not found, fall back to default version
	  string.

2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Fix logic
	  error.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs:
	* MonoDevelop.Moonlight/MoonlightFrameworkBackend.cs: Fix
	  fxversion lookup for manifest.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* MonoDevelop.Moonlight/MoonlightFrameworkBackend.cs:
	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs:
	  Renamed file. Remove MONO_PATH in the tools env vars if the
	  base runtime sets it.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs: Fix
	  enumertion properly.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/SilverlightFrameworkBackend.cs: Fix
	  redist package enumeration.

	* MonoDevelop.Moonlight/MoonlightProject.cs: Try 3.0 first,
	  fall back to 2.0.

2009-12-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* MonoDevelop.Moonlight.addin.xml:
	* MonoDevelop.Moonlight/MoonlightProject.cs: