@@ -130,7 +130,7 @@ namespace MonoDevelop.Moonlight
 			if (!is_application) {
 				foreach (DictionaryEntry entry  in names_and_types) {
 					string name = (string) entry.Key;
-					string type = (string) entry.Value;
+					CodeTypeReference type = (CodeTypeReference) entry.Value;
 
 					CodeMemberField field = new CodeMemberField ();
 
@@ -138,7 +138,7 @@ namespace MonoDevelop.Moonlight
 						field.Attributes = MemberAttributes.Assembly;
 
 					field.Name = name;
-					field.Type = new CodeTypeReference (type);
+					field.Type = type;
 
 					decl_type.Members.Add (field);
 
@@ -182,7 +182,11 @@ namespace MonoDevelop.Moonlight
 				if (ns != null)
 					member_type = String.Concat (ns, ".", member_type);
 
-				res [name] = member_type;
+				CodeTypeReference type = new CodeTypeReference (member_type);
+				if (ns != null)
+					type.Options |= CodeTypeReferenceOptions.GlobalReference;
+
+				res [name] = type;
 			}
 
 			return res;
